--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     compile "com.android.support:cardview-v7:$supportLV"
     compile "com.squareup.okhttp3:okhttp:3.1.2"
     compile "com.mcxiaoke.volley:library-aar:1.0.0"
-    compile "com.jakewharton:butterknife:7.0.1"
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile "com.google.firebase:firebase-database:11.0.4"
     compile "com.firebaseui:firebase-ui-database:1.2.0"
 }
