--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ ext.supportLV = '25.3.1'
 //firebase
 //https://medium.com/@dekoservidoni/realtime-chats-with-firebase-in-android-a2a131f94e0c
 //https://www.androidhive.info/2016/10/android-working-with-firebase-realtime-database/
+//https://codelabs.developers.google.com/codelabs/firebase-android/
 
 dependencies {
     compile "com.android.support:support-v4:$supportLV"
@@ -33,11 +34,15 @@ dependencies {
     compile "com.android.support:design:$supportLV"
     compile "com.android.support:recyclerview-v7:$supportLV"
     compile "com.android.support:cardview-v7:$supportLV"
+
     compile "com.squareup.okhttp3:okhttp:3.1.2"
     compile "com.mcxiaoke.volley:library-aar:1.0.0"
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    compile 'com.google.android.gms:play-services-auth:11.0.4'
     compile "com.google.firebase:firebase-database:11.0.4"
+    compile 'com.google.firebase:firebase-auth:11.0.4'
     compile "com.firebaseui:firebase-ui-database:1.2.0"
 }
 
