--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
             android:parentActivityName=".MainActivity">
         </activity>
 
+        <activity android:name=".SignInActivity" />
+
     </application>
 
 </manifest>
