--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$supportLV"
     compile "com.android.support:cardview-v7:$supportLV"
 
-    compile "com.squareup.okhttp3:okhttp:3.1.2"
+    //compile "com.squareup.okhttp3:okhttp:3.1.2"
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile "com.mcxiaoke.volley:library-aar:1.0.0"
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
