Added fancy FAB + animation tweeked add quiz layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         <activity android:name=".QuizDetailActivity"
             android:parentActivityName=".MainActivity">
         </activity>
+        <activity
+            android:name=".AddQuizActivity"
+            android:parentActivityName=".MainActivity"></activity>
 
         <activity android:name=".SignInActivity" />
 
