--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.hornak.prototype"
-        minSdkVersion 14
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -45,6 +45,8 @@ dependencies {
     compile "com.google.firebase:firebase-database:11.0.4"
     compile 'com.google.firebase:firebase-auth:11.0.4'
     compile "com.firebaseui:firebase-ui-database:1.2.0"
+
+    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
