--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/MyStyle">
         <activity android:name=".MainActivity">
@@ -18,12 +19,14 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".QuizDetailActivity"
+        <activity
+            android:name=".QuizDetailActivity"
             android:parentActivityName=".MainActivity">
         </activity>
         <activity
             android:name=".AddQuizActivity"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="stateVisible|adjustResize" />
 
         <activity android:name=".SignInActivity" />
 
