--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,7 @@
         <activity android:name=".PendingQuizDetailActivity" />
         <activity
             android:name=".AddQuizActivity"
-            android:parentActivityName=".MainActivity"
-            android:windowSoftInputMode="stateVisible|adjustResize" />
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".SignInActivity" />
         <activity
             android:name=".PendingQuizDetailActivity$SignUpTeamActivity"
