--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,15 @@
             android:name=".AddQuizActivity"
             android:parentActivityName=".MainActivity" />
         <activity android:name=".SignInActivity" />
+
         <activity
-            android:name=".PendingQuizDetailActivity$SignUpTeamActivity"
+            android:name=".MainActivity$RegisterNewTeam"
+            android:hardwareAccelerated="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Dialog" />
+
+        <activity
+            android:name=".PendingQuizDetailActivity$SignUpTeamToQuizActivity"
             android:hardwareAccelerated="false"
             android:label="Sign up"
             android:screenOrientation="portrait"
