--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 ext.supportLV = '25.3.1'
@@ -42,6 +43,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     compile 'com.google.android.gms:play-services-auth:11.0.4'
+    compile 'com.firebase:firebase-client-android:2.5.0'
     compile "com.google.firebase:firebase-database:11.0.4"
     compile 'com.google.firebase:firebase-auth:11.0.4'
     compile "com.firebaseui:firebase-ui-database:1.2.0"
