Added images to team list in QuizDetail

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,11 +53,12 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    compile 'com.google.android.gms:play-services-auth:11.0.4'
+    compile 'com.google.android.gms:play-services-auth:11.8.0'
     compile 'com.firebase:firebase-client-android:2.5.0'
-    compile "com.google.firebase:firebase-database:11.0.4"
-    compile 'com.google.firebase:firebase-auth:11.0.4'
+    compile "com.google.firebase:firebase-database:11.8.0"
+    compile 'com.google.firebase:firebase-auth:11.8.0'
     compile "com.firebaseui:firebase-ui-database:1.2.0"
+    compile 'com.google.firebase:firebase-firestore:11.8.0'
 
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
 }
