--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
 
         <activity
-            android:name=".QuizDetailActivity"
+            android:name=".PastQuizDetailActivity"
             android:parentActivityName=".MainActivity" />
 
         <activity android:name=".PendingQuizDetailActivity" />
